fix visibility select in view modal

--- a/frontend/app/assets/css/bootstrap/less/modals.less
+++ b/frontend/app/assets/css/bootstrap/less/modals.less
@@ -152,6 +152,7 @@
    padding:@modal-inner-padding;
    
    .modal-body-scroll {
+      overflow: visible;
       height: auto;
       margin: -@modal-inner-padding;
      }
